--- a/src/Sass/BasicInformation.module.scss
+++ b/src/Sass/BasicInformation.module.scss
@@ -43,4 +43,43 @@
       display: none;
     }
   }
+
+  .flex {
+    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
+
+    input {
+      width: 100%;
+      padding: 0.6rem 0.4rem;
+      border-radius: 3px;
+      margin-top: 0.2rem;
+      outline: none;
+      border: 1px solid rgb(131, 131, 131);
+      margin-bottom: 0.5rem;
+      &:focus {
+        border: 1px solid #0098fd;
+        outline: 1px solid #0098fd;
+      }
+    }
+
+    label {
+      font-weight: 600;
+    }
+
+    .left {
+      width: 48%;
+    }
+
+    .right {
+      width: 48%;
+    }
+  }
+
+  button {
+    @include blackBtn($primary-color, $secondary-color);
+    margin-top: 1.5rem;
+  }
 }
