--- a/src/Sass/EditForm.module.scss
+++ b/src/Sass/EditForm.module.scss
@@ -7,7 +7,11 @@
   padding: 1rem 2rem;
   display: flex;
   align-items: center;
-  gap: 30px;
+  flex-wrap: wrap;
+  gap: 20px;
+  @include md {
+    gap: 30px;
+  }
 
   .tab {
     padding: 0.5rem;
