--- a/src/Sass/Tips.module.scss
+++ b/src/Sass/Tips.module.scss
@@ -10,6 +10,7 @@
   display: flex;
   word-spacing: 2px;
   align-items: center;
+  line-height: 20px;
   gap: 0.5rem;
   @include responsive_width_set;
   width: 95%;
