--- a/src/Sass/BasicInformation.module.scss
+++ b/src/Sass/BasicInformation.module.scss
@@ -3,9 +3,11 @@
 
 .BasicInformation {
   width: 100%;
+  min-height: 55vh;
   @include responsive_width_set;
   padding: 1rem 1rem;
   margin-top: 2rem;
+  margin-bottom: 3rem;
   @include md {
     margin-top: 0rem;
     padding: 1rem 2rem;
