some functionality done

--- a/src/Sass/FontColor.module.scss
+++ b/src/Sass/FontColor.module.scss
@@ -11,6 +11,7 @@
 
   .preset {
     @include preset;
+    cursor: pointer;
   }
 
   .preset1 {
@@ -47,6 +48,7 @@
     position: relative;
     border-radius: 50%;
     overflow: hidden;
+    outline: none;
 
     input {
       width: 100%;
