--- a/src/Sass/ResumeTemplete.module.scss
+++ b/src/Sass/ResumeTemplete.module.scss
@@ -1,8 +1,13 @@
+@import "./mixin";
+
 .resumePreview {
   width: 100%;
   min-height: 100vh;
   background-color: #00000080;
-  position: absolute;
+  position: fixed;
+  @include md {
+    position: absolute;
+  }
   top: 0;
   left: 0;
   z-index: 999;
@@ -14,7 +19,10 @@
 
   .crossIcon {
     width: 100%;
-    max-width: 950px;
+    width: 90%;
+    @include md {
+      width: 950px;
+    }
     display: flex;
     align-items: flex-end;
     gap: 30px;
@@ -30,8 +38,20 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
       font-size: 1.2rem;
+
       cursor: pointer;
+    }
+  }
+
+  .worningText {
+    width: 90%;
+    padding: 1.5rem;
+    background-color: #fff;
+    text-align: center;
+    @include md {
+      display: none;
     }
   }
 
@@ -39,6 +59,10 @@
     background-color: #ffff;
     width: 950px;
     padding: 3rem;
+    display: none;
+    @include md {
+      display: block;
+    }
     min-height: 800px;
     height: auto;
 
@@ -56,7 +80,7 @@
       gap: 90px;
 
       img {
-        width: 220px;
+        width: 180px;
         height: 180px;
         border-radius: 50%;
       }
